--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>PRIMEIROS PASSOS COM DOM</title>
     <style>
         body{
-            background: rgb (68, 125, 69);
-            color: white;
+            background: rgb(0, 162, 255);
+            color: rgb(255, 255, 255);
             font: normal 18pt arial;
         }
     </style>
